# GeoDiary

./: README.md  package-lock.json
backend/: .gitignore  main.py  pyproject.toml
backend/app/: main.py
frontend/: .eslintrc.cjs  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.tsx
frontend/src/components/: Sign.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
